Dond the great part of the analysis

--- a/your-code/data-cleaning.ipynb
+++ b/your-code/data-cleaning.ipynb
@@ -243,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "<spotipy.client.Spotify at 0x7f1e36342610>"
+       "<spotipy.client.Spotify at 0x7fd60d342610>"
       ]
      },
      "execution_count": 7,
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,18 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ordovas/anaconda3/envs/ironhack/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3372: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wiki= lambda x: get_wiki_views(\"es\",x,2019,10,1,2020,10,1)\n",
     "top500_raw[\"wiki_views_album\"]=top500_raw[\"album\"].apply(wiki)\n",
@@ -339,383 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top500_raw.to_csv(r'../dataset/albumlist_clean.csv')"
+    "top500_raw.to_csv('../dataset/albumlist_clean.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>album</th>\n",
-       "      <th>artist</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>subgenre</th>\n",
-       "      <th>features</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>wiki_views_album</th>\n",
-       "      <th>wiki_views_artist</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Number</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1966</td>\n",
-       "      <td>Pet Sounds</td>\n",
-       "      <td>The Beach Boys</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Pop Rock, Psychedelic Rock]</td>\n",
-       "      <td>{'danceability': 0.43, 'energy': 0.434, 'loudn...</td>\n",
-       "      <td>0.4300</td>\n",
-       "      <td>0.434</td>\n",
-       "      <td>-7.9650</td>\n",
-       "      <td>0.03350</td>\n",
-       "      <td>0.5130</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.1420</td>\n",
-       "      <td>0.3640</td>\n",
-       "      <td>116.6680</td>\n",
-       "      <td>2281.0</td>\n",
-       "      <td>10595.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1966</td>\n",
-       "      <td>Revolver</td>\n",
-       "      <td>The Beatles</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Psychedelic Rock, Pop Rock]</td>\n",
-       "      <td>{'danceability': 0.538, 'energy': 0.5609999999...</td>\n",
-       "      <td>0.5380</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>-8.1825</td>\n",
-       "      <td>0.03860</td>\n",
-       "      <td>0.1825</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>0.1355</td>\n",
-       "      <td>0.6335</td>\n",
-       "      <td>130.0410</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>91096.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1965</td>\n",
-       "      <td>Highway 61 Revisited</td>\n",
-       "      <td>Bob Dylan</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Folk Rock, Blues Rock]</td>\n",
-       "      <td>{'danceability': 0.483, 'energy': 0.691, 'loud...</td>\n",
-       "      <td>0.4830</td>\n",
-       "      <td>0.691</td>\n",
-       "      <td>-6.9410</td>\n",
-       "      <td>0.03200</td>\n",
-       "      <td>0.7020</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.2620</td>\n",
-       "      <td>0.5910</td>\n",
-       "      <td>99.5000</td>\n",
-       "      <td>1004.0</td>\n",
-       "      <td>29581.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1965</td>\n",
-       "      <td>Rubber Soul</td>\n",
-       "      <td>The Beatles</td>\n",
-       "      <td>[Rock, Pop]</td>\n",
-       "      <td>[Pop Rock]</td>\n",
-       "      <td>{'danceability': 0.563, 'energy': 0.567, 'loud...</td>\n",
-       "      <td>0.5630</td>\n",
-       "      <td>0.567</td>\n",
-       "      <td>-9.2730</td>\n",
-       "      <td>0.03790</td>\n",
-       "      <td>0.0371</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0943</td>\n",
-       "      <td>0.6720</td>\n",
-       "      <td>121.4020</td>\n",
-       "      <td>4294.5</td>\n",
-       "      <td>91096.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>Exile on Main St.</td>\n",
-       "      <td>The Rolling Stones</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Blues Rock, Rock &amp; Roll, Classic Rock]</td>\n",
-       "      <td>{'danceability': 0.518, 'energy': 0.734, 'loud...</td>\n",
-       "      <td>0.5180</td>\n",
-       "      <td>0.734</td>\n",
-       "      <td>-5.7115</td>\n",
-       "      <td>0.04145</td>\n",
-       "      <td>0.5010</td>\n",
-       "      <td>0.311000</td>\n",
-       "      <td>0.2720</td>\n",
-       "      <td>0.6205</td>\n",
-       "      <td>114.2220</td>\n",
-       "      <td>2122.5</td>\n",
-       "      <td>38884.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>Give It Up</td>\n",
-       "      <td>Bonnie Raitt</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Blues Rock]</td>\n",
-       "      <td>{'danceability': 0.4575, 'energy': 0.58, 'loud...</td>\n",
-       "      <td>0.4575</td>\n",
-       "      <td>0.580</td>\n",
-       "      <td>-7.3500</td>\n",
-       "      <td>0.03120</td>\n",
-       "      <td>0.4115</td>\n",
-       "      <td>0.001240</td>\n",
-       "      <td>0.1725</td>\n",
-       "      <td>0.4845</td>\n",
-       "      <td>119.6340</td>\n",
-       "      <td>291.5</td>\n",
-       "      <td>930.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>1969</td>\n",
-       "      <td>Boz Scaggs</td>\n",
-       "      <td>Boz Scaggs</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Pop Rock]</td>\n",
-       "      <td>{'danceability': 0.593, 'energy': 0.524, 'loud...</td>\n",
-       "      <td>0.5930</td>\n",
-       "      <td>0.524</td>\n",
-       "      <td>-9.8450</td>\n",
-       "      <td>0.04250</td>\n",
-       "      <td>0.3570</td>\n",
-       "      <td>0.000783</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.4380</td>\n",
-       "      <td>121.0810</td>\n",
-       "      <td>883.5</td>\n",
-       "      <td>883.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>White Blood Cells</td>\n",
-       "      <td>The White Stripes</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Indie Rock, Alternative Rock, Blues Rock, Gar...</td>\n",
-       "      <td>{'danceability': 0.439, 'energy': 0.619, 'loud...</td>\n",
-       "      <td>0.4390</td>\n",
-       "      <td>0.619</td>\n",
-       "      <td>-4.7070</td>\n",
-       "      <td>0.04450</td>\n",
-       "      <td>0.4540</td>\n",
-       "      <td>0.000073</td>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>0.3800</td>\n",
-       "      <td>95.8850</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>6333.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>The Stone Roses</td>\n",
-       "      <td>The Stone Roses</td>\n",
-       "      <td>[Rock]</td>\n",
-       "      <td>[Indie Rock]</td>\n",
-       "      <td>{'danceability': 0.507, 'energy': 0.765, 'loud...</td>\n",
-       "      <td>0.5070</td>\n",
-       "      <td>0.765</td>\n",
-       "      <td>-6.7890</td>\n",
-       "      <td>0.04450</td>\n",
-       "      <td>0.0197</td>\n",
-       "      <td>0.007045</td>\n",
-       "      <td>0.1165</td>\n",
-       "      <td>0.5675</td>\n",
-       "      <td>124.4675</td>\n",
-       "      <td>2702.0</td>\n",
-       "      <td>2702.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>Aquemini</td>\n",
-       "      <td>OutKast</td>\n",
-       "      <td>[Hip Hop]</td>\n",
-       "      <td>[Reggae, Gangsta, Soul, Conscious]</td>\n",
-       "      <td>{'danceability': 0.66, 'energy': 0.66, 'loudne...</td>\n",
-       "      <td>0.6600</td>\n",
-       "      <td>0.660</td>\n",
-       "      <td>-6.6450</td>\n",
-       "      <td>0.23500</td>\n",
-       "      <td>0.1300</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.1440</td>\n",
-       "      <td>0.4280</td>\n",
-       "      <td>107.6470</td>\n",
-       "      <td>141.5</td>\n",
-       "      <td>215.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>370 rows × 17 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        year                 album              artist        genre  \\\n",
-       "Number                                                                \n",
-       "2       1966            Pet Sounds      The Beach Boys       [Rock]   \n",
-       "3       1966              Revolver         The Beatles       [Rock]   \n",
-       "4       1965  Highway 61 Revisited           Bob Dylan       [Rock]   \n",
-       "5       1965           Rubber Soul         The Beatles  [Rock, Pop]   \n",
-       "7       1972     Exile on Main St.  The Rolling Stones       [Rock]   \n",
-       "...      ...                   ...                 ...          ...   \n",
-       "495     1972            Give It Up        Bonnie Raitt       [Rock]   \n",
-       "496     1969            Boz Scaggs          Boz Scaggs       [Rock]   \n",
-       "497     2001     White Blood Cells   The White Stripes       [Rock]   \n",
-       "498     1989       The Stone Roses     The Stone Roses       [Rock]   \n",
-       "500     1998              Aquemini             OutKast    [Hip Hop]   \n",
-       "\n",
-       "                                                 subgenre  \\\n",
-       "Number                                                      \n",
-       "2                            [Pop Rock, Psychedelic Rock]   \n",
-       "3                            [Psychedelic Rock, Pop Rock]   \n",
-       "4                                 [Folk Rock, Blues Rock]   \n",
-       "5                                              [Pop Rock]   \n",
-       "7                 [Blues Rock, Rock & Roll, Classic Rock]   \n",
-       "...                                                   ...   \n",
-       "495                                          [Blues Rock]   \n",
-       "496                                            [Pop Rock]   \n",
-       "497     [Indie Rock, Alternative Rock, Blues Rock, Gar...   \n",
-       "498                                          [Indie Rock]   \n",
-       "500                    [Reggae, Gangsta, Soul, Conscious]   \n",
-       "\n",
-       "                                                 features  danceability  \\\n",
-       "Number                                                                    \n",
-       "2       {'danceability': 0.43, 'energy': 0.434, 'loudn...        0.4300   \n",
-       "3       {'danceability': 0.538, 'energy': 0.5609999999...        0.5380   \n",
-       "4       {'danceability': 0.483, 'energy': 0.691, 'loud...        0.4830   \n",
-       "5       {'danceability': 0.563, 'energy': 0.567, 'loud...        0.5630   \n",
-       "7       {'danceability': 0.518, 'energy': 0.734, 'loud...        0.5180   \n",
-       "...                                                   ...           ...   \n",
-       "495     {'danceability': 0.4575, 'energy': 0.58, 'loud...        0.4575   \n",
-       "496     {'danceability': 0.593, 'energy': 0.524, 'loud...        0.5930   \n",
-       "497     {'danceability': 0.439, 'energy': 0.619, 'loud...        0.4390   \n",
-       "498     {'danceability': 0.507, 'energy': 0.765, 'loud...        0.5070   \n",
-       "500     {'danceability': 0.66, 'energy': 0.66, 'loudne...        0.6600   \n",
-       "\n",
-       "        energy  loudness  speechiness  acousticness  instrumentalness  \\\n",
-       "Number                                                                  \n",
-       "2        0.434   -7.9650      0.03350        0.5130          0.000008   \n",
-       "3        0.561   -8.1825      0.03860        0.1825          0.000007   \n",
-       "4        0.691   -6.9410      0.03200        0.7020          0.000000   \n",
-       "5        0.567   -9.2730      0.03790        0.0371          0.000000   \n",
-       "7        0.734   -5.7115      0.04145        0.5010          0.311000   \n",
-       "...        ...       ...          ...           ...               ...   \n",
-       "495      0.580   -7.3500      0.03120        0.4115          0.001240   \n",
-       "496      0.524   -9.8450      0.04250        0.3570          0.000783   \n",
-       "497      0.619   -4.7070      0.04450        0.4540          0.000073   \n",
-       "498      0.765   -6.7890      0.04450        0.0197          0.007045   \n",
-       "500      0.660   -6.6450      0.23500        0.1300          0.000004   \n",
-       "\n",
-       "        liveness  valence     tempo  wiki_views_album  wiki_views_artist  \n",
-       "Number                                                                    \n",
-       "2         0.1420   0.3640  116.6680            2281.0            10595.5  \n",
-       "3         0.1355   0.6335  130.0410             222.0            91096.5  \n",
-       "4         0.2620   0.5910   99.5000            1004.0            29581.5  \n",
-       "5         0.0943   0.6720  121.4020            4294.5            91096.5  \n",
-       "7         0.2720   0.6205  114.2220            2122.5            38884.0  \n",
-       "...          ...      ...       ...               ...                ...  \n",
-       "495       0.1725   0.4845  119.6340             291.5              930.5  \n",
-       "496       0.1250   0.4380  121.0810             883.5              883.5  \n",
-       "497       0.1110   0.3800   95.8850             176.0             6333.5  \n",
-       "498       0.1165   0.5675  124.4675            2702.0             2702.0  \n",
-       "500       0.1440   0.4280  107.6470             141.5              215.0  \n",
-       "\n",
-       "[370 rows x 17 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
