Formating the cleaning notebook

--- a/your-code/data-analysis.ipynb
+++ b/your-code/data-analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Analysis of the cleanded and enriched dataset\n",
+    "##  Analysis of the cleanded and enriched dataset\n",
     "\n",
     "With the cleaned list now we are going to analyze the properties of the top 500 albums with the additiona information gathered from the Spotify and Wikipedia APIs.\n",
     "\n",
