--- a/your-code/data-cleaning.ipynb
+++ b/your-code/data-cleaning.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory analysis of the dataset\n",
+    "# The 500 Greatest Albums of All Time\n",
     "\n",
-    "Banter and more banter\n",
+    "In 2003, the Rolling Stones magazinde published an article about a selection of the 500 greatest albums of the history. This database will serve as an exercise to practice dataset cleaning and to complete information using APIs from Wikipedia and Spotify.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Dataset cleaning and cross correlation with API data\n",
+    "\n",
+    "I obtained the top 500 albums dataset from the Kaggle website, using the following link:\n",
     "\n",
     "https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone?select=albumlist.csv\n",
     "\n",
-    "country_codes= ['AD', 'AR', 'AU', 'AT', 'BE', 'BO', 'BR', 'BG', 'CA', 'CL', 'CO', 'CR', 'CY', 'CZ', 'DK', 'DO', 'EC', 'SV', 'EE', 'FI', 'FR', 'DE', 'GR', 'GT', 'HN', 'HK', 'HU', 'IS', 'ID', 'IE', 'IT', 'JP', 'LV', 'LI', 'LT', 'LU', 'MY', 'MT', 'MX', 'MC', 'NL', 'NZ', 'NI', 'NO', 'PA', 'PY', 'PE', 'PH', 'PL', 'PT', 'SG', 'ES', 'SK', 'SE', 'CH', 'TW', 'TR', 'GB', 'US', 'UY']"
+    "To procede with the data cleaning we begin iporting the neccesaray library and functions. In enrich_functions.py, that we import in this notebook, we have several user made functions to work better with the selected APIs.\n"
    ]
   },
   {
@@ -27,7 +33,6 @@
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "import numpy as np\n",
     "from enrich_functions import *\n",
-    "from analysis_functions import *\n",
     "import re"
    ]
   },
@@ -35,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data cleaning"
+    "## Data cleaning\n",
+    "\n",
+    "We begin importing the dataset and showing its header, to have a look at how it is organized."
    ]
   },
   {
@@ -153,6 +160,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by changing the column names to lowercase. Even though we can work with capitalized words, this is just a convention."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -165,7 +179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separate generes and subgeneres in different columns."
+    "Now let's do a simple cleaning of bad characters in the genre and sub genre columns. \n",
+    "\n",
+    "There are albums that combine genre and subgenres, so we create for each cell a list with the different categories."
    ]
   },
   {
@@ -183,7 +199,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Renaming wrong album names and dropping the ones that arent in spoty"
+    "We need to do some treatement on the albums column, as there are some of them whose same is not the same as the one listed in the Spotify catalog. They also don't admit \"'\", so we eliminate them. \n",
+    "\n",
+    "To conduct this cleaning we create a dictionary in a function to replace bad names with RegEx. We apply this function to the \"album\" column using Panda's apply."
    ]
   },
   {
@@ -215,8 +233,8 @@
     "    for wrong,right in dic.items():\n",
     "        xr=xr.replace(wrong,right)\n",
     "    return xr\n",
-    "#wrong = lambda x: x.replace(wrong, right) for wrong, right in dict_rep.items()\n",
-    "top500_raw[\"album\"]=top500_raw[\"album\"].apply(wrong)\n"
+    "\n",
+    "top500_raw[\"album\"]=top500_raw[\"album\"].apply(wrong)"
    ]
   },
   {
@@ -232,7 +250,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enrich spoty"
+    "## Completing the information using the Spotify API\n",
+    "\n",
+    "Using the credentials obtained from Spotify"
    ]
   },
   {
