Finished explainin the cleaning procedure

--- a/your-code/data-cleaning.ipynb
+++ b/your-code/data-cleaning.ipynb
@@ -252,7 +252,11 @@
    "source": [
     "## Completing the information using the Spotify API\n",
     "\n",
-    "Using the credentials obtained from Spotify"
+    "Using the credentials obtained from Spotify, we are going to complete the information from each album. We are going to do by searching the unique album ID for each input. With this ID, we are going to collect all the tracks for each album, and from each track, we are going to download the musical features (danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence and tempo). I am going to compute the median of all tracks in each album to obtain the median album features.\n",
+    "\n",
+    "To do so, we load the credential for the Spotify API, and import the `Spotipy` library, used to manage the API requests. In addition, in `enrich_functions.py`, there are stored functions to retrive the desired data, that were made for this specific project.\n",
+    "\n",
+    "First of all, we initialize the Spotify API mangament system in python with `Spotipy` and loading the ID and secret token:"
    ]
   },
   {
@@ -281,6 +285,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, to retrive the mentioned musical information from each album, we define a lambda function that uses the user made function `get_album_features_median`, whose inputs are the Spotify API client (`spotify`) and the string of the album name. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -290,18 +301,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We apply this function to the column album, that stores the name of each album."
+   ]
   },
   {
    "cell_type": "code",
@@ -312,6 +316,15 @@
    "outputs": [],
    "source": [
     "top500_raw[\"features\"]=top500_raw[\"album\"].apply(features_median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, this funtion output is a dictionary with the median values of danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence and tempo for each album.\n",
+    "\n",
+    "For working better with this data, we add a column for each feature using the Pandas command `concat`."
    ]
   },
   {
@@ -327,7 +340,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "get_wiki_views(lang,page,ini_year,ini_month,ini_day,end_year,end_month,end_day)"
+    "## Completing the information using the Wikipedia API\n",
+    "\n",
+    "Now we are going to complete even more the top 500 album dataset by looking at the Wikipedia web page monthly reads for each album and each artists in Spain. This will allow us to compare the curiosity about albums and artist information with the position in the top.\n",
+    "\n",
+    "To do so, we defined a function in `enrich_functions.py` called `get_wiki_views`. This function output is the median monthly visits for a certain page in a range of time. The inputs are the Wikipedia language (\"es\" for Spain), the name of the Wikipedia article, the initial and ending year, month and days to compute the median monthly reads (we are goint to check it between 2019-10-01 and 2020-10-01).\n",
+    "\n",
+    "We create a lambda funcion so the only input is the dersired album or artist, and we create a column with eac information using Pandas `apply`."
    ]
   },
   {
@@ -351,11 +370,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Finally, we store the clean dataset in a new file called `albumlist_clean.csv`. We are going to load this cleaned file in the data-analysis notebook to conduct the analysis of the dataset that we prepared in this notebook."
+   ]
   },
   {
    "cell_type": "code",
