Finished explainin the analysis notebook, recomit

--- a/your-code/data-analysis.ipynb
+++ b/your-code/data-analysis.ipynb
@@ -9,7 +9,7 @@
     "With the cleaned list now we are going to analyze the properties of the top 500 albums with the additiona information gathered from the Spotify and Wikipedia APIs. The objectives are:\n",
     "\n",
     "- To analyze the correlation of the musical features of the album with its position in the list, to discover whether some characteristics make an album more critically acclaimed.\n",
-    "- To check if the Wikipedia interest of the album in Spain, based on the median monthly count reads, has a relation with the album position, or with artist \n",
+    "- To check if the Wikipedia interest of the album in Spain, based on the median monthly count reads, has a relation with the album position, or with artists with several albums in the top 500. \n",
     "\n",
     "First we are going to import the libraries that we are going to need for the analysis.\n"
    ]
